logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-02T040000+0000/task_id=Load_songplays_fact_table/attempt=2.log
[2025-07-24T13:42:37.354+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T04:00:00+00:00 [queued]>
[2025-07-24T13:42:37.372+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T04:00:00+00:00 [queued]>
[2025-07-24T13:42:37.373+0000] {taskinstance.py:2170} INFO - Starting attempt 2 of 4
[2025-07-24T13:42:38.771+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 04:00:00+00:00
[2025-07-24T13:42:39.333+0000] {standard_task_runner.py:60} INFO - Started process 142 to run task
[2025-07-24T13:42:39.350+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T04:00:00+00:00', '--job-id', '306', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpi53at4v1']
[2025-07-24T13:42:39.455+0000] {standard_task_runner.py:88} INFO - Job 306: Subtask Load_songplays_fact_table
[2025-07-24T13:42:40.136+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T04:00:00+00:00 [running]> on host a4bcda7cb679
[2025-07-24T13:42:43.272+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T04:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T04:00:00+00:00'
[2025-07-24T13:42:43.803+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 168, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 127, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T13:42:44.485+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T040000, start_date=20250724T134237, end_date=20250724T134244
[2025-07-24T13:42:45.552+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 306 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 142)
[2025-07-24T13:42:45.963+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T13:42:46.191+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-07-24T16:04:26.816+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T04:00:00+00:00 [queued]>
[2025-07-24T16:04:26.828+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T04:00:00+00:00 [queued]>
[2025-07-24T16:04:26.829+0000] {taskinstance.py:2170} INFO - Starting attempt 2 of 4
[2025-07-24T16:04:26.850+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 04:00:00+00:00
[2025-07-24T16:04:26.858+0000] {standard_task_runner.py:60} INFO - Started process 1584 to run task
[2025-07-24T16:04:26.863+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T04:00:00+00:00', '--job-id', '1285', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpxsmafo9x']
[2025-07-24T16:04:26.868+0000] {standard_task_runner.py:88} INFO - Job 1285: Subtask Load_songplays_fact_table
[2025-07-24T16:04:26.953+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T04:00:00+00:00 [running]> on host c53547d84df1
[2025-07-24T16:04:27.039+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T04:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T04:00:00+00:00'
[2025-07-24T16:04:27.081+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 173, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert, 'songplays'),
  File "/opt/airflow/dags/etl_pipeline.py", line 132, in load_table
    cur.execute(f"INSERT INTO {table} {query}")
psycopg2.errors.UniqueViolation: duplicate key value violates unique constraint "songplays_pkey"
DETAIL:  Key (playid)=(e30eb65b5ce5534fed9764a7996916ec) already exists.

[2025-07-24T16:04:27.095+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T040000, start_date=20250724T160426, end_date=20250724T160427
[2025-07-24T16:04:27.117+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 1285 for task Load_songplays_fact_table (duplicate key value violates unique constraint "songplays_pkey"
DETAIL:  Key (playid)=(e30eb65b5ce5534fed9764a7996916ec) already exists.
; 1584)
[2025-07-24T16:04:27.157+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T16:04:27.181+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
